# cuEV

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONVENTIONS.md  Doxyfile  Makefile  README.md  run.sh
.github/workflows/: docs.yml
bench/: bench.cpp  bench_cuev.cpp  bench_dbbr.cpp  bench_evd.cpp  bench_mp.cpp  bench_solver.cpp
cmake/: FindCAL.cmake  FindCUBLASMp.cmake  FindCUSOLVERMp.cmake  FindNCCL.cmake  FindNVSHMEM.cmake  FindUCC.cmake
include/: common.h  cuev.h  cuev_mp.h  kernels.cuh  workspace.h  workspace_mp.h
include/cuda/: handle.h  kernels.cuh
include/mp/: comm.h  handle_mp.h  kernels_mp.cuh  workspace_mp.h
src/: bench.cpp  main.cpp
src/cuda/: backtransform.cu  bulge.cu  cublas.cu  cusolver.cu  dbbr.cu  gemm.cu  gemv.cu  handle.cu  householder.cu  kernels.cu  kernels.cuh  qdwh.cu  sdc.cu  solver.cu  tridi.cu  util.cu  workspace.cu
src/custom/: gemm.cu  gemv.cu  householder.cu  solver.cu  tridiag.cu  util.cu
src/mp/: comm.cu  cublas_mp.cu  cusolver_mp.cu  handle_mp.cu  qdwh_mp.cu  sdc_mp.cu  solver_mp.cu  workspace_mp.cu
test/: debug.cpp  test_mp.cpp  test_qdwh.cu  test_sdc.cu
test/cuda/: test.h  test_backtransform.cu  test_bulge.cu  test_dbbr.cu  test_qdwh.cu  test_sdc.cu  test_solver.cu  test_tridi.cu
test/mp/: mp_test.h  test_mp.cpp  test_primitives_mp.cpp  test_qdwh_mp.cpp  test_solver_mp.cpp
